--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,17 @@
         </div>
     </header>
     <main>
+        
         <section>
             <h2>Meus Trabalhos</h2>
             <ul>
-                <li><a href="https://exemplo1.com">Projeto 1</a></li>
-                <li><a href="https://exemplo2.com">Projeto 2</a></li>
-                <li><a href="https://exemplo3.com">Projeto 3</a></li>
+                <p><a href="Gestao_Cofrinho.zip">Projeto de Gestão de Cofre</a></p>
+                <p><a href="Golden Dragon - Cardapio Restaurante vietnamita em Baixa e Alta Fidelidade.pdf">Projeto de Design de restaurante</a></p>
+                <p><a href="Trabalho - Relatorio Yan.pdf">Projeto de Banco de Dados</a></p>
             </ul>
+            
         </section>
+
     </main>
     <footer>
         <p>&copy; 2024 Yan Silva</p>
