--- a/formacao.html
+++ b/formacao.html
@@ -22,13 +22,13 @@
         </div>
     </header>
     <main>
-        <section>
+        <div class="body-text">
             <h2>Minha Formação</h2>
             <p>Possuo formação como Técnico em Automação Industrial pelo Instituto Federal de Minas Gerais - Campus Ouro Preto e estou cursando Engenharia de Software na Uninter.Possuo algumas certificações na área de Automação relacionados a sistemas de supervisão (Aveva OMI). Além disso, falo inglês em nível avançado.</p>
-        </section>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Yan Silva</p>
+        <p>&copy; 2024 - Yan Silva</p>
     </footer>
 </body>
 </html>
