--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         </div>
     </header>
     <main>
-        <section>
+        <div class="body-text">
             <h2>Quem sou eu?</h2>
             <p>Olá, meu nome é Yan Silva. Sou um entusiasta de tecnologia e suas aplicações no mundo.Trabalho como Técnico em Automação na Samarco. Nos meus tempos livres, gosto de assistir a filmes e séries, jogar videogames e explorar a natureza através de caminhadas e trekking. Além dessas atividades, também pratico Muay Thai e frequento a academia regularmente buscando um estilo de vida saudável. </p>
-        </section>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Yan Silva</p>
+        <p>&copy; 2024 - Yan Silva</p>
     </footer>
 </body>
 </html>
