--- a/portfolio.html
+++ b/portfolio.html
@@ -22,20 +22,17 @@
         </div>
     </header>
     <main>
-        
-        <section>
+        <div class="body-text">
             <h2>Meus Trabalhos</h2>
             <ul>
                 <p><a href="Gestao_Cofrinho.zip">Projeto de Gestão de Cofre</a></p>
                 <p><a href="Golden Dragon - Cardapio Restaurante vietnamita em Baixa e Alta Fidelidade.pdf">Projeto de Design de restaurante</a></p>
                 <p><a href="Trabalho - Relatorio Yan.pdf">Projeto de Banco de Dados</a></p>
             </ul>
-            
-        </section>
-
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Yan Silva</p>
+        <p>&copy; 2024 - Yan Silva</p>
     </footer>
 </body>
 </html>
