--- a/contato.html
+++ b/contato.html
@@ -22,9 +22,9 @@
         </div>
     </header>
     <main>
-        <section>
-            <h2>Contate-me</h2>
-            <form id="contactForm">
+        <div id="contata-me">
+            <h2>Me envie uma mensagem</h2>
+            <form>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" required>
                 <label for="email">Email:</label>
@@ -33,10 +33,10 @@
                 <textarea id="mensagem" name="mensagem" required></textarea>
                 <button type="submit">Enviar</button>
             </form>
-        </section>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Yan Silva</p>
+        <p>&copy; 2024 - Yan Silva</p>
     </footer>
 </body>
 </html>
